tests/compiletests/ui/lang/consts/u32-from-u64-fail.stderr
error[E0277]: the trait bound `u32: From<u64>` is not satisfied
  --> $DIR/u32-from-u64-fail.rs:14:17
   |
14 |     let value = u32::from(K);
   |                 ^^^ the trait `From<u64>` is not implemented for `u32`
   |
   = help: the following other types implement trait `From<T>`:
             `u32` implements `From<Char>`
             `u32` implements `From<Ipv4Addr>`
             `u32` implements `From<bool>`
             `u32` implements `From<char>`
             `u32` implements `From<u16>`
             `u32` implements `From<u8>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
